Bug fix filehandler include in course delete bug fix spaces around Union in calcinterval Bug fix block selecting copyitems Bug fix IE6 table header layout issue
git-svn-id: http://imathas.googlecode.com/svn/trunk@646 c89b4f0b-ac2a-0410-9773-c9071ee4f95d

--- a/imascore.css
+++ b/imascore.css
@@ -119,6 +119,7 @@ div#tbl-container {
 table.gb {
 	border-collapse: collapse;
 	margin: 0px;
+	position:relative;
 }
 
 table.gb thead th {
